{
  "version": 4,
  "terraform_version": "1.11.4",
  "serial": 5234,
  "lineage": "6c44888d-3af1-53e1-2ecf-5ae8f27c0a53",
  "resources": [
    {
      "module": "module.network_frankfurt",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].euc1",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:058898200941:internet-gateway/igw-07db033533b9ed9be",
            "id": "igw-07db033533b9ed9be",
            "owner_id": "058898200941",
            "region": "eu-central-1",
            "tags": {
              "Environment": "dev",
              "Name": "multi-region-spot-dev-igw",
              "Project": "multi-region-spot"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "multi-region-spot-dev-igw",
              "Project": "multi-region-spot"
            },
            "vpc_id": "vpc-09f7d47c8568c9afa"
          },
          "dependencies": [
            "module.network_frankfurt.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.network_frankfurt",
      "mode": "managed",
      "type": "aws_route",
      "name": "public-route",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].euc1",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-07db033533b9ed9be",
            "id": "r-rtb-03dda28d91c296bc81080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "region": "eu-central-1",
            "route_table_id": "rtb-03dda28d91c296bc8",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.network_frankfurt.aws_internet_gateway.igw",
            "module.network_frankfurt.aws_route_table.public_rt",
            "module.network_frankfurt.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.network_frankfurt",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public_rt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].euc1",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:058898200941:route-table/rtb-03dda28d91c296bc8",
            "id": "rtb-03dda28d91c296bc8",
            "owner_id": "058898200941",
            "propagating_vgws": [],
            "region": "eu-central-1",
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-07db033533b9ed9be",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Environment": "dev",
              "Name": "multi-region-spot-dev-public-route-table",
              "Project": "multi-region-spot"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "multi-region-spot-dev-public-route-table",
              "Project": "multi-region-spot"
            },
            "timeouts": null,
            "vpc_id": "vpc-09f7d47c8568c9afa"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.network_frankfurt.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.network_frankfurt",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public_rt_association_1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].euc1",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0406dd4214353df27",
            "region": "eu-central-1",
            "route_table_id": "rtb-03dda28d91c296bc8",
            "subnet_id": "subnet-0876b287ca3d71562"
          },
          "dependencies": [
            "module.network_frankfurt.aws_route_table.public_rt",
            "module.network_frankfurt.aws_subnet.public_subnet_1",
            "module.network_frankfurt.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.network_frankfurt",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public_rt_association_2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].euc1",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-095fb8da75ea195e7",
            "region": "eu-central-1",
            "route_table_id": "rtb-03dda28d91c296bc8",
            "subnet_id": "subnet-0e10ee8c319bec628"
          },
          "dependencies": [
            "module.network_frankfurt.aws_route_table.public_rt",
            "module.network_frankfurt.aws_subnet.public_subnet_2",
            "module.network_frankfurt.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.network_frankfurt",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public_subnet_1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].euc1",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:058898200941:subnet/subnet-0876b287ca3d71562",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-central-1a",
            "availability_zone_id": "euc1-az2",
            "cidr_block": "10.5.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0876b287ca3d71562",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "058898200941",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "eu-central-1",
            "tags": {
              "Environment": "dev",
              "Name": "multi-region-spot-dev-public-subnet-1",
              "Project": "multi-region-spot",
              "Type": "public"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "multi-region-spot-dev-public-subnet-1",
              "Project": "multi-region-spot",
              "Type": "public"
            },
            "vpc_id": "vpc-09f7d47c8568c9afa"
          },
          "dependencies": [
            "module.network_frankfurt.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.network_frankfurt",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public_subnet_2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].euc1",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:058898200941:subnet/subnet-0e10ee8c319bec628",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-central-1b",
            "availability_zone_id": "euc1-az3",
            "cidr_block": "10.5.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0e10ee8c319bec628",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "058898200941",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "eu-central-1",
            "tags": {
              "Environment": "dev",
              "Name": "multi-region-spot-dev-public-subnet-2",
              "Project": "multi-region-spot",
              "Type": "public"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "multi-region-spot-dev-public-subnet-2",
              "Project": "multi-region-spot",
              "Type": "public"
            },
            "vpc_id": "vpc-09f7d47c8568c9afa"
          },
          "dependencies": [
            "module.network_frankfurt.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.network_frankfurt",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].euc1",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:058898200941:vpc/vpc-09f7d47c8568c9afa",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.5.0.0/16",
            "default_network_acl_id": "acl-0b1a43fc64b821d7f",
            "default_route_table_id": "rtb-06befe59d4e5b717b",
            "default_security_group_id": "sg-0e728c1153da410e1",
            "dhcp_options_id": "dopt-793ad910",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-09f7d47c8568c9afa",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-06befe59d4e5b717b",
            "owner_id": "058898200941",
            "region": "eu-central-1",
            "tags": {
              "Environment": "dev",
              "Name": "multi-region-spot-dev-vpc",
              "Project": "multi-region-spot"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "multi-region-spot-dev-vpc",
              "Project": "multi-region-spot"
            }
          }
        }
      ]
    },
    {
      "module": "module.network_ireland",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].euw1",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:058898200941:internet-gateway/igw-07988b28989d48729",
            "id": "igw-07988b28989d48729",
            "owner_id": "058898200941",
            "region": "eu-west-1",
            "tags": {
              "Environment": "dev",
              "Name": "multi-region-spot-dev-igw",
              "Project": "multi-region-spot"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "multi-region-spot-dev-igw",
              "Project": "multi-region-spot"
            },
            "vpc_id": "vpc-05ea4b570883550fd"
          },
          "dependencies": [
            "module.network_ireland.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.network_ireland",
      "mode": "managed",
      "type": "aws_route",
      "name": "public-route",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].euw1",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-07988b28989d48729",
            "id": "r-rtb-0a5ae6c312b2833491080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "region": "eu-west-1",
            "route_table_id": "rtb-0a5ae6c312b283349",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.network_ireland.aws_internet_gateway.igw",
            "module.network_ireland.aws_route_table.public_rt",
            "module.network_ireland.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.network_ireland",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public_rt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].euw1",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:058898200941:route-table/rtb-0a5ae6c312b283349",
            "id": "rtb-0a5ae6c312b283349",
            "owner_id": "058898200941",
            "propagating_vgws": [],
            "region": "eu-west-1",
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-07988b28989d48729",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Environment": "dev",
              "Name": "multi-region-spot-dev-public-route-table",
              "Project": "multi-region-spot"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "multi-region-spot-dev-public-route-table",
              "Project": "multi-region-spot"
            },
            "timeouts": null,
            "vpc_id": "vpc-05ea4b570883550fd"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.network_ireland.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.network_ireland",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public_rt_association_1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].euw1",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-05e46b67b1102f9af",
            "region": "eu-west-1",
            "route_table_id": "rtb-0a5ae6c312b283349",
            "subnet_id": "subnet-032b0d5a638f29f34"
          },
          "dependencies": [
            "module.network_ireland.aws_route_table.public_rt",
            "module.network_ireland.aws_subnet.public_subnet_1",
            "module.network_ireland.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.network_ireland",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public_rt_association_2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].euw1",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0a29275efa5a2775d",
            "region": "eu-west-1",
            "route_table_id": "rtb-0a5ae6c312b283349",
            "subnet_id": "subnet-01047837d688bacab"
          },
          "dependencies": [
            "module.network_ireland.aws_route_table.public_rt",
            "module.network_ireland.aws_subnet.public_subnet_2",
            "module.network_ireland.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.network_ireland",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public_subnet_1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].euw1",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:058898200941:subnet/subnet-032b0d5a638f29f34",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-1a",
            "availability_zone_id": "euw1-az2",
            "cidr_block": "10.6.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-032b0d5a638f29f34",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "058898200941",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "eu-west-1",
            "tags": {
              "Environment": "dev",
              "Name": "multi-region-spot-dev-public-subnet-1",
              "Project": "multi-region-spot",
              "Type": "public"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "multi-region-spot-dev-public-subnet-1",
              "Project": "multi-region-spot",
              "Type": "public"
            },
            "vpc_id": "vpc-05ea4b570883550fd"
          },
          "dependencies": [
            "module.network_ireland.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.network_ireland",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public_subnet_2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].euw1",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:058898200941:subnet/subnet-01047837d688bacab",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-1b",
            "availability_zone_id": "euw1-az1",
            "cidr_block": "10.6.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-01047837d688bacab",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "058898200941",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "eu-west-1",
            "tags": {
              "Environment": "dev",
              "Name": "multi-region-spot-dev-public-subnet-2",
              "Project": "multi-region-spot",
              "Type": "public"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "multi-region-spot-dev-public-subnet-2",
              "Project": "multi-region-spot",
              "Type": "public"
            },
            "vpc_id": "vpc-05ea4b570883550fd"
          },
          "dependencies": [
            "module.network_ireland.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.network_ireland",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].euw1",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:058898200941:vpc/vpc-05ea4b570883550fd",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.6.0.0/16",
            "default_network_acl_id": "acl-00a049fd6b9fa6f02",
            "default_route_table_id": "rtb-0b2509345a428520e",
            "default_security_group_id": "sg-01de5d11f64a90157",
            "dhcp_options_id": "dopt-a52b39c7",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-05ea4b570883550fd",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0b2509345a428520e",
            "owner_id": "058898200941",
            "region": "eu-west-1",
            "tags": {
              "Environment": "dev",
              "Name": "multi-region-spot-dev-vpc",
              "Project": "multi-region-spot"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "multi-region-spot-dev-vpc",
              "Project": "multi-region-spot"
            }
          }
        }
      ]
    },
    {
      "module": "module.network_oregon",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].usw2",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:058898200941:internet-gateway/igw-074ec60f93f227905",
            "id": "igw-074ec60f93f227905",
            "owner_id": "058898200941",
            "region": "us-west-2",
            "tags": {
              "Environment": "dev",
              "Name": "multi-region-spot-dev-igw",
              "Project": "multi-region-spot"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "multi-region-spot-dev-igw",
              "Project": "multi-region-spot"
            },
            "vpc_id": "vpc-0281fc7e12b7448f7"
          },
          "dependencies": [
            "module.network_oregon.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.network_oregon",
      "mode": "managed",
      "type": "aws_route",
      "name": "public-route",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].usw2",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-074ec60f93f227905",
            "id": "r-rtb-0201bbf727455b9d21080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "region": "us-west-2",
            "route_table_id": "rtb-0201bbf727455b9d2",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.network_oregon.aws_internet_gateway.igw",
            "module.network_oregon.aws_route_table.public_rt",
            "module.network_oregon.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.network_oregon",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public_rt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].usw2",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:058898200941:route-table/rtb-0201bbf727455b9d2",
            "id": "rtb-0201bbf727455b9d2",
            "owner_id": "058898200941",
            "propagating_vgws": [],
            "region": "us-west-2",
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-074ec60f93f227905",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Environment": "dev",
              "Name": "multi-region-spot-dev-public-route-table",
              "Project": "multi-region-spot"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "multi-region-spot-dev-public-route-table",
              "Project": "multi-region-spot"
            },
            "timeouts": null,
            "vpc_id": "vpc-0281fc7e12b7448f7"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.network_oregon.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.network_oregon",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public_rt_association_1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].usw2",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-07fd847ff6e2585da",
            "region": "us-west-2",
            "route_table_id": "rtb-0201bbf727455b9d2",
            "subnet_id": "subnet-0b2d898353135e84e"
          },
          "dependencies": [
            "module.network_oregon.aws_route_table.public_rt",
            "module.network_oregon.aws_subnet.public_subnet_1",
            "module.network_oregon.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.network_oregon",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public_rt_association_2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].usw2",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0384b0cbe8f06b996",
            "region": "us-west-2",
            "route_table_id": "rtb-0201bbf727455b9d2",
            "subnet_id": "subnet-03d2bfc93c338fe36"
          },
          "dependencies": [
            "module.network_oregon.aws_route_table.public_rt",
            "module.network_oregon.aws_subnet.public_subnet_2",
            "module.network_oregon.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.network_oregon",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public_subnet_1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].usw2",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:058898200941:subnet/subnet-0b2d898353135e84e",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-2a",
            "availability_zone_id": "usw2-az2",
            "cidr_block": "10.4.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0b2d898353135e84e",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "058898200941",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "us-west-2",
            "tags": {
              "Environment": "dev",
              "Name": "multi-region-spot-dev-public-subnet-1",
              "Project": "multi-region-spot",
              "Type": "public"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "multi-region-spot-dev-public-subnet-1",
              "Project": "multi-region-spot",
              "Type": "public"
            },
            "vpc_id": "vpc-0281fc7e12b7448f7"
          },
          "dependencies": [
            "module.network_oregon.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.network_oregon",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public_subnet_2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].usw2",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:058898200941:subnet/subnet-03d2bfc93c338fe36",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-2b",
            "availability_zone_id": "usw2-az1",
            "cidr_block": "10.4.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-03d2bfc93c338fe36",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "058898200941",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "us-west-2",
            "tags": {
              "Environment": "dev",
              "Name": "multi-region-spot-dev-public-subnet-2",
              "Project": "multi-region-spot",
              "Type": "public"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "multi-region-spot-dev-public-subnet-2",
              "Project": "multi-region-spot",
              "Type": "public"
            },
            "vpc_id": "vpc-0281fc7e12b7448f7"
          },
          "dependencies": [
            "module.network_oregon.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.network_oregon",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].usw2",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:058898200941:vpc/vpc-0281fc7e12b7448f7",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.4.0.0/16",
            "default_network_acl_id": "acl-0b0d5405c8cc08f31",
            "default_route_table_id": "rtb-01673d7daded1ca2d",
            "default_security_group_id": "sg-0ef53e2f8cf5dbeae",
            "dhcp_options_id": "dopt-41ea0c24",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0281fc7e12b7448f7",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-01673d7daded1ca2d",
            "owner_id": "058898200941",
            "region": "us-west-2",
            "tags": {
              "Environment": "dev",
              "Name": "multi-region-spot-dev-vpc",
              "Project": "multi-region-spot"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "multi-region-spot-dev-vpc",
              "Project": "multi-region-spot"
            }
          }
        }
      ]
    },
    {
      "module": "module.network_singapore",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].apse1",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:058898200941:internet-gateway/igw-0157045cc57731883",
            "id": "igw-0157045cc57731883",
            "owner_id": "058898200941",
            "region": "ap-southeast-1",
            "tags": {
              "Environment": "dev",
              "Name": "multi-region-spot-dev-igw",
              "Project": "multi-region-spot"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "multi-region-spot-dev-igw",
              "Project": "multi-region-spot"
            },
            "vpc_id": "vpc-07a7851121edbb81e"
          },
          "dependencies": [
            "module.network_singapore.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.network_singapore",
      "mode": "managed",
      "type": "aws_route",
      "name": "public-route",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].apse1",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-0157045cc57731883",
            "id": "r-rtb-0eb25b2e3a5d9eb9e1080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "region": "ap-southeast-1",
            "route_table_id": "rtb-0eb25b2e3a5d9eb9e",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.network_singapore.aws_internet_gateway.igw",
            "module.network_singapore.aws_route_table.public_rt",
            "module.network_singapore.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.network_singapore",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public_rt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].apse1",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:058898200941:route-table/rtb-0eb25b2e3a5d9eb9e",
            "id": "rtb-0eb25b2e3a5d9eb9e",
            "owner_id": "058898200941",
            "propagating_vgws": [],
            "region": "ap-southeast-1",
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0157045cc57731883",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Environment": "dev",
              "Name": "multi-region-spot-dev-public-route-table",
              "Project": "multi-region-spot"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "multi-region-spot-dev-public-route-table",
              "Project": "multi-region-spot"
            },
            "timeouts": null,
            "vpc_id": "vpc-07a7851121edbb81e"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.network_singapore.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.network_singapore",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public_rt_association_1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].apse1",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-02193f5f6db5e4a9e",
            "region": "ap-southeast-1",
            "route_table_id": "rtb-0eb25b2e3a5d9eb9e",
            "subnet_id": "subnet-021d4a1bba0664b7f"
          },
          "dependencies": [
            "module.network_singapore.aws_route_table.public_rt",
            "module.network_singapore.aws_subnet.public_subnet_1",
            "module.network_singapore.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.network_singapore",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public_rt_association_2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].apse1",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-05dea53f11264322a",
            "region": "ap-southeast-1",
            "route_table_id": "rtb-0eb25b2e3a5d9eb9e",
            "subnet_id": "subnet-007e6c5a2e7526da9"
          },
          "dependencies": [
            "module.network_singapore.aws_route_table.public_rt",
            "module.network_singapore.aws_subnet.public_subnet_2",
            "module.network_singapore.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.network_singapore",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public_subnet_1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].apse1",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:058898200941:subnet/subnet-021d4a1bba0664b7f",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-southeast-1a",
            "availability_zone_id": "apse1-az1",
            "cidr_block": "10.2.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-021d4a1bba0664b7f",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "058898200941",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "ap-southeast-1",
            "tags": {
              "Environment": "dev",
              "Name": "multi-region-spot-dev-public-subnet-1",
              "Project": "multi-region-spot",
              "Type": "public"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "multi-region-spot-dev-public-subnet-1",
              "Project": "multi-region-spot",
              "Type": "public"
            },
            "vpc_id": "vpc-07a7851121edbb81e"
          },
          "dependencies": [
            "module.network_singapore.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.network_singapore",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public_subnet_2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].apse1",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:058898200941:subnet/subnet-007e6c5a2e7526da9",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-southeast-1b",
            "availability_zone_id": "apse1-az2",
            "cidr_block": "10.2.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-007e6c5a2e7526da9",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "058898200941",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "ap-southeast-1",
            "tags": {
              "Environment": "dev",
              "Name": "multi-region-spot-dev-public-subnet-2",
              "Project": "multi-region-spot",
              "Type": "public"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "multi-region-spot-dev-public-subnet-2",
              "Project": "multi-region-spot",
              "Type": "public"
            },
            "vpc_id": "vpc-07a7851121edbb81e"
          },
          "dependencies": [
            "module.network_singapore.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.network_singapore",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].apse1",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:058898200941:vpc/vpc-07a7851121edbb81e",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.2.0.0/16",
            "default_network_acl_id": "acl-08074ec3eaecc7db5",
            "default_route_table_id": "rtb-0a39630cc0fc2f8ca",
            "default_security_group_id": "sg-05852f5a2d44fd4fa",
            "dhcp_options_id": "dopt-b6fce7d4",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-07a7851121edbb81e",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0a39630cc0fc2f8ca",
            "owner_id": "058898200941",
            "region": "ap-southeast-1",
            "tags": {
              "Environment": "dev",
              "Name": "multi-region-spot-dev-vpc",
              "Project": "multi-region-spot"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "multi-region-spot-dev-vpc",
              "Project": "multi-region-spot"
            }
          }
        }
      ]
    },
    {
      "module": "module.network_tokyo",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:058898200941:internet-gateway/igw-05f327115f40cb6fc",
            "id": "igw-05f327115f40cb6fc",
            "owner_id": "058898200941",
            "region": "ap-northeast-1",
            "tags": {
              "Environment": "dev",
              "Name": "multi-region-spot-dev-igw",
              "Project": "multi-region-spot"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "multi-region-spot-dev-igw",
              "Project": "multi-region-spot"
            },
            "vpc_id": "vpc-06ab86976a43c72b4"
          },
          "dependencies": [
            "module.network_tokyo.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.network_tokyo",
      "mode": "managed",
      "type": "aws_route",
      "name": "public-route",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-05f327115f40cb6fc",
            "id": "r-rtb-0258ca99cbd1c72681080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "region": "ap-northeast-1",
            "route_table_id": "rtb-0258ca99cbd1c7268",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.network_tokyo.aws_internet_gateway.igw",
            "module.network_tokyo.aws_route_table.public_rt",
            "module.network_tokyo.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.network_tokyo",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public_rt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:058898200941:route-table/rtb-0258ca99cbd1c7268",
            "id": "rtb-0258ca99cbd1c7268",
            "owner_id": "058898200941",
            "propagating_vgws": [],
            "region": "ap-northeast-1",
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-05f327115f40cb6fc",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Environment": "dev",
              "Name": "multi-region-spot-dev-public-route-table",
              "Project": "multi-region-spot"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "multi-region-spot-dev-public-route-table",
              "Project": "multi-region-spot"
            },
            "timeouts": null,
            "vpc_id": "vpc-06ab86976a43c72b4"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.network_tokyo.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.network_tokyo",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public_rt_association_1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-064c90677165d617a",
            "region": "ap-northeast-1",
            "route_table_id": "rtb-0258ca99cbd1c7268",
            "subnet_id": "subnet-0b9833549506bcdea"
          },
          "dependencies": [
            "module.network_tokyo.aws_route_table.public_rt",
            "module.network_tokyo.aws_subnet.public_subnet_1",
            "module.network_tokyo.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.network_tokyo",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public_rt_association_2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0b5d7efb43d08ee8c",
            "region": "ap-northeast-1",
            "route_table_id": "rtb-0258ca99cbd1c7268",
            "subnet_id": "subnet-05d88af90016c8ab1"
          },
          "dependencies": [
            "module.network_tokyo.aws_route_table.public_rt",
            "module.network_tokyo.aws_subnet.public_subnet_2",
            "module.network_tokyo.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.network_tokyo",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public_subnet_1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:058898200941:subnet/subnet-0b9833549506bcdea",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-northeast-1c",
            "availability_zone_id": "apne1-az1",
            "cidr_block": "10.1.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0b9833549506bcdea",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "058898200941",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "ap-northeast-1",
            "tags": {
              "Environment": "dev",
              "Name": "multi-region-spot-dev-public-subnet-1",
              "Project": "multi-region-spot",
              "Type": "public"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "multi-region-spot-dev-public-subnet-1",
              "Project": "multi-region-spot",
              "Type": "public"
            },
            "vpc_id": "vpc-06ab86976a43c72b4"
          },
          "dependencies": [
            "module.network_tokyo.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.network_tokyo",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public_subnet_2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:058898200941:subnet/subnet-05d88af90016c8ab1",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-northeast-1d",
            "availability_zone_id": "apne1-az2",
            "cidr_block": "10.1.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-05d88af90016c8ab1",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "058898200941",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "ap-northeast-1",
            "tags": {
              "Environment": "dev",
              "Name": "multi-region-spot-dev-public-subnet-2",
              "Project": "multi-region-spot",
              "Type": "public"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "multi-region-spot-dev-public-subnet-2",
              "Project": "multi-region-spot",
              "Type": "public"
            },
            "vpc_id": "vpc-06ab86976a43c72b4"
          },
          "dependencies": [
            "module.network_tokyo.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.network_tokyo",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:058898200941:vpc/vpc-06ab86976a43c72b4",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.1.0.0/16",
            "default_network_acl_id": "acl-083c0fdb5efb48684",
            "default_route_table_id": "rtb-096ba84782fb82379",
            "default_security_group_id": "sg-04cb35a8c6c7884e8",
            "dhcp_options_id": "dopt-64708a0c",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-06ab86976a43c72b4",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-096ba84782fb82379",
            "owner_id": "058898200941",
            "region": "ap-northeast-1",
            "tags": {
              "Environment": "dev",
              "Name": "multi-region-spot-dev-vpc",
              "Project": "multi-region-spot"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "multi-region-spot-dev-vpc",
              "Project": "multi-region-spot"
            }
          }
        }
      ]
    },
    {
      "module": "module.network_virginia",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].use1",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:058898200941:internet-gateway/igw-03e83a5393a889a81",
            "id": "igw-03e83a5393a889a81",
            "owner_id": "058898200941",
            "region": "us-east-1",
            "tags": {
              "Environment": "dev",
              "Name": "multi-region-spot-dev-igw",
              "Project": "multi-region-spot"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "multi-region-spot-dev-igw",
              "Project": "multi-region-spot"
            },
            "vpc_id": "vpc-004616919f64a657f"
          },
          "dependencies": [
            "module.network_virginia.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.network_virginia",
      "mode": "managed",
      "type": "aws_route",
      "name": "public-route",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].use1",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-03e83a5393a889a81",
            "id": "r-rtb-006dcaed550cdb7e11080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "region": "us-east-1",
            "route_table_id": "rtb-006dcaed550cdb7e1",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.network_virginia.aws_internet_gateway.igw",
            "module.network_virginia.aws_route_table.public_rt",
            "module.network_virginia.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.network_virginia",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public_rt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].use1",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:058898200941:route-table/rtb-006dcaed550cdb7e1",
            "id": "rtb-006dcaed550cdb7e1",
            "owner_id": "058898200941",
            "propagating_vgws": [],
            "region": "us-east-1",
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-03e83a5393a889a81",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Environment": "dev",
              "Name": "multi-region-spot-dev-public-route-table",
              "Project": "multi-region-spot"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "multi-region-spot-dev-public-route-table",
              "Project": "multi-region-spot"
            },
            "timeouts": null,
            "vpc_id": "vpc-004616919f64a657f"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.network_virginia.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.network_virginia",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public_rt_association_1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].use1",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-09aa7a2969ca60993",
            "region": "us-east-1",
            "route_table_id": "rtb-006dcaed550cdb7e1",
            "subnet_id": "subnet-01b49c60c17c0480c"
          },
          "dependencies": [
            "module.network_virginia.aws_route_table.public_rt",
            "module.network_virginia.aws_subnet.public_subnet_1",
            "module.network_virginia.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.network_virginia",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public_rt_association_2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].use1",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0a1ecec0c18a96186",
            "region": "us-east-1",
            "route_table_id": "rtb-006dcaed550cdb7e1",
            "subnet_id": "subnet-0107395ce23527351"
          },
          "dependencies": [
            "module.network_virginia.aws_route_table.public_rt",
            "module.network_virginia.aws_subnet.public_subnet_2",
            "module.network_virginia.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.network_virginia",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public_subnet_1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].use1",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:058898200941:subnet/subnet-01b49c60c17c0480c",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.3.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-01b49c60c17c0480c",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "058898200941",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "us-east-1",
            "tags": {
              "Environment": "dev",
              "Name": "multi-region-spot-dev-public-subnet-1",
              "Project": "multi-region-spot",
              "Type": "public"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "multi-region-spot-dev-public-subnet-1",
              "Project": "multi-region-spot",
              "Type": "public"
            },
            "vpc_id": "vpc-004616919f64a657f"
          },
          "dependencies": [
            "module.network_virginia.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.network_virginia",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public_subnet_2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].use1",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:058898200941:subnet/subnet-0107395ce23527351",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1c",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.3.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0107395ce23527351",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "058898200941",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "us-east-1",
            "tags": {
              "Environment": "dev",
              "Name": "multi-region-spot-dev-public-subnet-2",
              "Project": "multi-region-spot",
              "Type": "public"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "multi-region-spot-dev-public-subnet-2",
              "Project": "multi-region-spot",
              "Type": "public"
            },
            "vpc_id": "vpc-004616919f64a657f"
          },
          "dependencies": [
            "module.network_virginia.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.network_virginia",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].use1",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:058898200941:vpc/vpc-004616919f64a657f",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.3.0.0/16",
            "default_network_acl_id": "acl-0409f7bc585a6c43a",
            "default_route_table_id": "rtb-0f4f653ba88401d7b",
            "default_security_group_id": "sg-01a511d4c8fa85b44",
            "dhcp_options_id": "dopt-8d11ace9",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-004616919f64a657f",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0f4f653ba88401d7b",
            "owner_id": "058898200941",
            "region": "us-east-1",
            "tags": {
              "Environment": "dev",
              "Name": "multi-region-spot-dev-vpc",
              "Project": "multi-region-spot"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "multi-region-spot-dev-vpc",
              "Project": "multi-region-spot"
            }
          }
        }
      ]
    },
    {
      "module": "module.security_frankfurt",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "db_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].euc1",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:058898200941:security-group/sg-0a3adff50b59f8d9e",
            "description": "Security group for DB server",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0a3adff50b59f8d9e",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 3306,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 3306
              }
            ],
            "name": "multi-region-spot-dev-db-sg",
            "name_prefix": "",
            "owner_id": "058898200941",
            "region": "eu-central-1",
            "revoke_rules_on_delete": false,
            "tags": {},
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-09f7d47c8568c9afa"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.network_frankfurt.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.security_ireland",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "db_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].euw1",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:058898200941:security-group/sg-07d88d5b53d4b301c",
            "description": "Security group for DB server",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-07d88d5b53d4b301c",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 3306,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 3306
              }
            ],
            "name": "multi-region-spot-dev-db-sg",
            "name_prefix": "",
            "owner_id": "058898200941",
            "region": "eu-west-1",
            "revoke_rules_on_delete": false,
            "tags": {},
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-05ea4b570883550fd"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.network_ireland.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.security_oregon",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "db_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].usw2",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:058898200941:security-group/sg-074f729e321abc292",
            "description": "Security group for DB server",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-074f729e321abc292",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 3306,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 3306
              }
            ],
            "name": "multi-region-spot-dev-db-sg",
            "name_prefix": "",
            "owner_id": "058898200941",
            "region": "us-west-2",
            "revoke_rules_on_delete": false,
            "tags": {},
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-0281fc7e12b7448f7"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.network_oregon.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.security_singapore",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "db_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].apse1",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:058898200941:security-group/sg-0110d64a6229d2030",
            "description": "Security group for DB server",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0110d64a6229d2030",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 3306,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 3306
              }
            ],
            "name": "multi-region-spot-dev-db-sg",
            "name_prefix": "",
            "owner_id": "058898200941",
            "region": "ap-southeast-1",
            "revoke_rules_on_delete": false,
            "tags": {},
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-07a7851121edbb81e"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.network_singapore.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.security_tokyo",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "db_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:058898200941:security-group/sg-087ffb2760ab82e54",
            "description": "Security group for DB server",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-087ffb2760ab82e54",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 3306,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 3306
              }
            ],
            "name": "multi-region-spot-dev-db-sg",
            "name_prefix": "",
            "owner_id": "058898200941",
            "region": "ap-northeast-1",
            "revoke_rules_on_delete": false,
            "tags": {},
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-06ab86976a43c72b4"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.network_tokyo.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.security_virginia",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "db_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].use1",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:058898200941:security-group/sg-094b9f30ef2e6cb96",
            "description": "Security group for DB server",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-094b9f30ef2e6cb96",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 3306,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 3306
              }
            ],
            "name": "multi-region-spot-dev-db-sg",
            "name_prefix": "",
            "owner_id": "058898200941",
            "region": "us-east-1",
            "revoke_rules_on_delete": false,
            "tags": {},
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-004616919f64a657f"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.network_virginia.aws_vpc.vpc"
          ]
        }
      ]
    }
  ]
}